grammar.js
    file: ($) => seq(optional($._header), repeat1($._module_elem)),
    //TODO i could make a different version of this for when the module is an interface
    _module_elem: ($) =>
      choice(
        $.annotation_type_def,
        $.alias_type_def,
        $.opaque_type_def,
        $.nominal_type_def,
        $.expect,
        alias($._module_value_declaration, $.value_declaration),
        alias($._module_var_declaration, $.var_declaration),
        $.expr_body,
        $.import_expr,
        $.import_file_expr,
      ),

    _module_value_declaration: ($) =>
      seq(
        alias($._assignment_pattern, $.decl_left),
        "=",
        field("body", alias($.expr_body_terminal, $.expr_body)),
      ),

    value_declaration: ($) => seq(optional($.annotation_type_def), $._module_value_declaration),

    body_expression: ($) =>
      seq(
        "{",
        repeat1(
          choice(
            $.value_declaration,
            $.var_declaration,
            $.local_type_binding,
            $.expect,
            $._expr_inner,
          ),
        ),
        "}",
      ),

    expr_body: ($) => $._expr_inner,
    _postfix_expr: ($) =>
      choice(
        $._primary_expr,
        $.field_access_expr,
        $.tuple_access_expr,
        $.function_call_pnc_expr,
        $.suffix_op_expr,
      ),

    _atom_expr: ($) => choice($._postfix_expr, $.prefixed_expression),

    _expr_inner: ($) => choice($.bin_op_expr, $._atom_expr),

    //orginally this had all operators, but it was making the parser almost twice as large so I cut the list down
    prefixed_expression: ($) =>
      prec(
        PREC.PREFIX_EXPR,
        seq(choice("!", "*", "-", "^"), choice($._postfix_expr, $.prefixed_expression)),
      ),
    parenthesized_expr: ($) => seq("(", field("expression", $.expr_body), ")"),
    field_access_expr: ($) =>
      prec.left(
        PREC.FIELD_ACCESS_START,
        seq(
          field("target", $._postfix_expr),
          choice(
            seq(".", alias(imm(IDENTIFIER), $.identifier)),
            seq(alias(".?", $.optional_access), alias(imm(IDENTIFIER), $.identifier)),
          ),
        ),
      ),

    function_call_pnc_expr: ($) =>
      prec.left(
        PREC.FUNC,
        seq(
          field("caller", $._postfix_expr),
          imm("("),
          optional(field("args", $._expression_args)),
          ")",
        ),
      ),

    // Sharing this recursive list keeps it from expanding into each argument context.
    _expression_args: ($) => sep1_tail($._expr_inner, ","),

    bin_op_expr: ($) =>
      field(
        "part",
        prec(
          PREC.PART,
          seq(
            $._atom_expr,
            // Keeping operands atomic lets the enclosing repeat own
            // subsequent operators without reopening the expression tier.
            prec.right(repeat1(seq($.operator, $._atom_expr))),
          ),
        ),
      ),
    // Suffixes bind to the nearest postfix expression. Pipelines use the same
    // operand rule as every other operator rather than rebuilding this tier.
    _match_start: ($) => seq(alias("match", $.match), $._expr_inner),

    match_expr: ($) => seq($._match_start, "{", repeat1(field("branch", $.match_branch)), "}"),

    match_branch: ($) =>
      seq(
        field("pattern", $._pattern),
        optional(seq("if", alias($._expr_inner, $.if))),
        $.fat_arrow,
        //TODO: evaluate what options can got here
        field("expr", $.expr_body),
        optional(","),
      ),
    tag_expr: ($) => prec.left(seq($.tag, repeat(seq("(", $._atom_expr, ")")))),
    anon_fun_expr: ($) =>
      prec.left(
        seq("|", field("args", optional($.argument_patterns)), "|", field("body", $.expr_body)),
      ),

    //RECORDS

    record_expr: ($) =>
      seq(
        "{",
        optional($._record_expr_fields),
        "}",
        optional(field("builder", $.record_builder_suffix)),
      ),

    // Sharing this list avoids duplicating its GLR states for nominal records.
    _record_expr_fields: ($) => sep1_tail(choice($.record_field_expr, $.spread_expr), ","),

    _pattern: ($) =>
      choice(
        alias("_", $.wildcard_pattern),
        alias($.const, $.const_pattern),
        alias($.string_pattern, $.const_pattern),
        $.identifier_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.paren_pattern,
        $.list_pattern,
        prec(3, $.tag_pattern),
        $.nominal_constructor_pattern,
        $.nominal_record_pattern,
        $.record_pattern,
        $.tuple_pattern,
        $.spread_pattern,
        $.as_pattern,
      ),

    identifier_pattern: ($) => prec(PREC.FIELD_ACCESS_START + 1, $.identifier),
    nominal_constructor_pattern: ($) =>
      seq($.tag, imm(".("), field("value", $._nominal_pattern_payload), ")"),

    _nominal_pattern_payload: ($) => sep1_tail($._pattern, ","),

    nominal_record_pattern: ($) => seq($.tag, imm(".{"), optional($._record_pattern_fields), "}"),
    spread_pattern: ($) =>
      prec.left(seq("..", optional(choice(seq("as", $.identifier), $.identifier)))),

    argument_patterns: ($) => $._pattern_args,

    // Tags and lambdas use the same atomic, trailing-comma argument syntax.
    _pattern_args: ($) => sep1_tail($._atomic_pattern, ","),
    _atomic_pattern: ($) =>
      choice(
        "null",
        alias("_", $.wildcard_pattern),
        $.const,
        alias($.string_pattern, $.const_pattern),
        $.identifier_pattern,
        $.list_pattern,
        $.tuple_pattern,
        $.record_pattern,
        prec(2, $.tag_pattern),
        $.nominal_constructor_pattern,
        $.nominal_record_pattern,
        $.mutable_pattern,
        //TODO: this shhouldn't realy be here
        $.spread_pattern,
        $.paren_pattern,

        // :? atomic_type
      ),
    _record_pattern_fields: ($) =>
      sep1_tail(choice($.spread_pattern, $.record_field_pattern), ","),

    record_field_pattern: ($) => seq($.field_name, optional(seq(":", $._atomic_pattern))),
    //###--------####
    //### HEADER ####
    //###--------###

    _header: ($) => choice($.app_header, $.platform_header, $.module_header, $.package_header),
    alias_type_def: ($) => seq($.apply_type, ":", field("body", $._type_annotation)),

    nominal_type_def: ($) =>
      seq(
        $.apply_type,
        alias(":=", $.colon_equals),
        $._type_annotation,
        optional($.nominal_methods),
      ),

    // Nominal method blocks: `.{ ... }`
    // Allow any top-level items (defs, types, expects, expressions) inside.
    // Keep the grammar tight to avoid conflicts with module paths like `Type.Module`.
    _type_annotation: ($) => prec.left(choice($.where_implements, $._non_atomic_type)),
    tags_type: ($) => seq("[", optional($._tag_type_entries), "]"),

    // Isolate recursive tag arguments from each surrounding type context.
    _tag_type_entries: ($) => sep1_tail(choice($.tag_type, $.spread_type), ","),

    tag_type: ($) => seq(field("name", $._upper_identifier), optional($._apply_type_args)),
    apply_type: ($) => prec.right(seq($.concrete_type, optional($._apply_type_args))),

    //GOOD
    concrete_type: ($) =>
      prec.right(
        PREC.TYPEALIAS,
        seq($._upper_identifier, repeat(prec(PREC.TYPEALIAS, seq(".", $._upper_identifier)))),
      ),

    //we need a n optional \n to stop this eating the value that follows it
    _apply_type_args: ($) =>
      field(
        "type_args",
        prec.right(seq(imm("("), prec.right(PREC.ARGS, $._apply_type_arg_list), ")")),
      ),

    // Keep recursive type arguments out of each applied-type context.
    record_type: ($) => seq("{", optional($._record_type_fields), "}"),

    // Isolate recursive field annotations from each surrounding type context.
    _record_type_fields: ($) => sep1_tail(choice($.record_field_type, $.spread_type), ","),

    record_field_type: ($) =>
      choice(
        seq($._record_type_field_name, alias("?:", $.optional_field), $._type_annotation),
        seq(
          $._record_type_field_name,
          ":",
          alias($.record_function_type, $.function_type),
          optional(seq(alias("??", $.default_value), $.expr_body)),
        ),
        seq(
          $._record_type_field_name,
          ":",
          $._type_annotation,
          optional(seq(alias("??", $.default_value), $.expr_body)),
        ),
      ),
    // A distinct nonterminal lets GLR retain a comma as a function parameter
    // separator instead of prematurely ending the surrounding record field.
    // Unlike the old workaround, punctuation, trivia, and arrows remain
    // separate tokens with accurate source ranges.
    _record_type_field_name: ($) => choice($.field_name, alias("_", $.field_name)),
    /** can be used to make tag unions or records open*/

    const: ($) =>
      choice(
        $.negative_number,
        $._unsigned_number,
        $.char,
        $.typed_string,
        $.string,
        $.multiline_string,
        "false",
        "true",
        // $.unit,
      ),

    _unsigned_number: ($) =>
      choice(
        // Dot-suffix literals must come before their unsuffixed prefixes.
        $.number_with_suffix,
        $.float,
        $.xint,
        $.int,
      ),

    // Roc lexes signed numerals as one token. A narrow external binary-minus
    // token handles the overlapping no-space subtraction form `value-1`.
    typed_string: ($) =>
      choice(
        seq($.string, $.literal_type_suffix),
        seq($.multiline_string, alias($.multiline_literal_type_suffix, $.literal_type_suffix)),
      ),
    literal_type_suffix: ($) => imm(/\.[\p{Lu}][\p{XID_Continue}]*/),
    string: ($) =>
      seq('"', repeat(choice(imm(prec(0, /[^\n\\"]/)), $.interpolation_char, $.escape_char)), '"'),

    multiline_string: ($) =>
      prec.right(
        repeat1(
          seq(
            "\\\\",
            repeat(choice(imm(prec(0, /[^\\\n]/)), $.interpolation_char, $.escape_char)),
            $._newline,
          ),
        ),
      ),

    string_pattern_capture: ($) => seq(imm("${"), $._pattern, "}"),
    int: ($) => token(DECIMAL_INTEGER),
    // Modern numeric suffixes use an immediate `.UpperType`, including custom
    // numeric types. The compiler tokenizes the numeric core and suffix together.
    fat_arrow: ($) => "=>",
    field_name: ($) => alias($.identifier, $.field_name),

    _long_upper_identifier: ($) =>
      prec.right(seq(optional($._module_prefix), alias($._upper_identifier, $.identifier))),

    // Value and tag paths share the same qualified module prefix.
    identifier: ($) =>
      choice(
        token(prec(101, /\$?_*[\p{Ll}][\p{XID_Continue}]*!/)),
        token(prec(101, /\$?_+[\p{Ll}][\p{XID_Continue}]*/)),
        prec(100, seq(optional("$"), $._lower_identifier)),
      ),

    _lower_identifier: ($) => /[\p{Ll}][\p{XID_Continue}]*/,

    _upper_identifier: ($) => /[\p{Lu}][\p{XID_Continue}]*/,
    tag: ($) => $._long_upper_identifier,
    operator: ($) => alias($.operator_identifier, $.operator),
    operator_identifier: ($) => choice("|>", $._non_pipe_operator_identifier),
    _non_pipe_operator_identifier: ($) =>
      choice(
        "and",
        "or",
        "&&",
        "||",
        "+",
        "*",
        "-",
        "//",
        "/",
        "<=",
        "<",
        ">=",
        ">",
        "^",
        "%",
        "..<",
        "..=",
        "->",
        "==",
        "!=",
        alias($._tight_binary_minus, "-"),
        token(prec(1, "??")),
        "?",
      ),
  },
});

function decimalFractionLiteral() {
  return seq(DECIMAL_INTEGER, ".", DECIMAL_INTEGER, optional(EXPONENT));
}

function floatLiteral() {
  return choice(
    seq(decimalFractionLiteral(), optional(choice("f32", "f64"))),
    seq(DECIMAL_INTEGER, EXPONENT, optional(choice("f32", "f64"))),
  );
}

function numberWithSuffixLiteral() {
  return seq(
    choice(
      HEX_INTEGER,
      OCTAL_INTEGER,
      BINARY_INTEGER,
      decimalFractionLiteral(),
      seq(DECIMAL_INTEGER, EXPONENT),
      DECIMAL_INTEGER,
    ),
    imm(/\./),
    imm(NUMERIC_TYPE_NAME),
  );
}

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
function sep1end(rule, separator, end) {
  return seq(repeat(seq(rule, separator)), end);
}
function sep1_tail(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)), optional(separator));
}
function sep_tail(rule, separator) {
  return optional(sep1_tail(rule, separator));
}

function imm(x) {
  return token.immediate(x);
}
